--- a/Yes_Page.html
+++ b/Yes_Page.html
@@ -14,7 +14,7 @@
         <p>Let's begin with the first day of the week,Rose Day 🌹</p>
         <div class="gif-container">
             <div class="rounded-gif">
-                <img src="Happy.gif" alt="Happy GIF">
+                <img src="/Images/Happy.gif" alt="Happy GIF">
             </div>
         </div>
         <button id="startBtn" class="btn">Start Rose Day</button>
