--- a/No_Page.html
+++ b/No_Page.html
@@ -26,7 +26,7 @@
 
 <body>
     <div class="container">
-        <img src="/Images/SadNO.gif" alt="Crying">
+        <img src="SadNO.gif" alt="Crying">
     </div>
 
 </body>
