--- a/RoseDay.html
+++ b/RoseDay.html
@@ -16,7 +16,7 @@
                     <div class="text">
                         <strong>💖 Dear Ankita 💖</strong>
                         <p>
-                            <img src="/Images//RoseDayPic.png" alt="RoseDay">
+                            <img src="RoseDayPic.png" alt="RoseDay">
                         </p>
                     </div>
                 </div>
