--- a/No_Page.html
+++ b/No_Page.html
@@ -12,6 +12,11 @@
             padding: 0;
             box-sizing: border-box;
             display: flex;
+            background-image: url('Rain.gif');
+            background-size: cover;
+            /* Cover the entire background */
+            background-position: center;
+            /* Center the background image */
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -20,13 +25,15 @@
 
         .container {
             max-width: 600px;
+            
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <img src="SadNO.gif" alt="Crying">
+        <h1 style="color: bisque;">You have made me sad my love</h1>
+        <img src="SadNO.gif " style="border-radius: 50px;" alt="Crying">
     </div>
 
 </body>
