--- a/No_Page.html
+++ b/No_Page.html
@@ -25,17 +25,22 @@
 
         .container {
             max-width: 600px;
-            
+            text-align: center;
+        }
+
+        .container img {
+            display: block;
+            margin: 0 auto;
+            border-radius: 50px;
         }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1 style="color: bisque;">You have made me sad my love</h1>
-        <img src="SadNO.gif " style="border-radius: 50px;" alt="Crying">
+        <h1 style="color: bisque;">NO IS NOT A OPTION FOR YOU LOVE 😁</h1>
+        <img src="Laugh.gif" alt="Laugh">
     </div>
-
 </body>
 
 </html>
