--- a/Yes_Page.html
+++ b/Yes_Page.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>😍 Congratulations 😍</h2>
-        <p>You have chosen to start the Valentine Week!</p>
+        <p>Now you are my valentine!</p>
         <p>Let's begin with the first day of the week,Rose Day 🌹</p>
         <div class="gif-container">
             <div class="rounded-gif">
