--- a/No_Page.html
+++ b/No_Page.html
@@ -24,6 +24,7 @@
         }
 
         .container {
+            width: 90%; /* Adjust width for smaller screens */
             max-width: 600px;
             text-align: center;
         }
@@ -31,7 +32,12 @@
         .container img {
             display: block;
             margin: 0 auto;
+            max-width: 100%; /* Ensure image doesn't overflow container */
             border-radius: 50px;
+        }
+
+        h1 {
+            font-size: 24px; /* Adjust font size for smaller screens */
         }
     </style>
 </head>
