--- a/RoseDay.html
+++ b/RoseDay.html
@@ -14,7 +14,7 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>💖 Dear Ankita 💖</strong>
+                        <strong>💖 Dear Kartika 💖</strong>
                         <p>
                             <img src="RoseDayPic.png" alt="RoseDay">
                         </p>
